deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flaskdemo
  labels:
    app: flaskdemo
spec:
  replicas: 3
  selector:
    matchLabels:
      app: flaskdemo
  template:
    metadata:
      labels:
        app: flaskdemo
    spec:
      containers:
      - name: flaskdemo
        image: anandnandu0316/test:6
        ports:
        - containerPort: 5000
