flask_service.yaml
apiVersion: v1
kind: Service
metadata:
  name: flaskdemo-service
  labels:
    app: flaskdemo
spec:
  type: ClusterIP
  selector:
    app: flaskdemo
  ports:
  - port: 80
    targetPort: 5000
