flaskdemo-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: flaskdemo-ingress
  annotations:
    kubernetes.io/ingress.class: alb
    alb.ingress.kubernetes.io/scheme: internet-facing
    # Listen on HTTP and HTTPS
    alb.ingress.kubernetes.io/listen-ports: '[{"HTTP":80},{"HTTPS":443}]'
    alb.ingress.kubernetes.io/target-type: ip
    # Replace with your actual ACM certificate ARN
    alb.ingress.kubernetes.io/certificate-arn: arn:aws:acm:ap-south-1:309149493601:certificate/e0319859-35c2-483e-88e2-42c5e6565266
    # Optionally redirect HTTP (80) requests to HTTPS (443)
    alb.ingress.kubernetes.io/ssl-redirect: '443'
spec:
  rules:
  - host: flask.anandmallela.in
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: flaskdemo-service
            port:
              number: 80
